unpackaged/main/default/objects/Contract_Pdf_Header__c/Contract_Pdf_Header__c.object-meta.xml
<CustomObject>
    <label>Contract Pdf Header</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Pdf Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Pdf Header</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>