unpackaged/main/default/objects/Contract_Pdf_Header__c/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>