unpackaged/main/default/objects/Contract_Pdf_Header__c/fields/Customer_Quote__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Quote</label>
    <referenceTo>Customer_Quote__c</referenceTo>
    <relationshipLabel>Contract Pdf Header</relationshipLabel>
    <relationshipName>Contract_Pdf_Header</relationshipName>
    <type>Lookup</type>
</CustomField>