unpackaged/main/default/objects/Contract_Pdf_Header__c/fields/ET_Rep_Designation__c.field-meta.xml
<CustomField>
    <fullName>ET_Rep_Designation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>