unpackaged/main/default/objects/Contract_Pdf_Header__c/fields/ET_Representative__c.field-meta.xml
<CustomField>
    <fullName>ET_Representative__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates Transport Representative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>